--- a/exercicios/ex008/index.html
+++ b/exercicios/ex008/index.html
@@ -1,36 +1,36 @@
- <!DOCTYPE html>
- <html lang="pt-br">
- <head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatação de Textos</title>
-    <style>
-        mark{
-            background-color: aquamarine;
-        }
-    </style>
- </head>
- <body>
-    <h1>Principais formatações</h1>
-    <h2>Negrito / Destaque</h2>
-    <p>Nessa frase temos um <b>termo em negrito</b> usando a tag B (não semântica).</p>
-    <p>Nesta frase tenho um <strong>termo em destaque</strong> usando a tag STRONG (semântica).</p>
-    <h2>Itálico / Ênfase </h2>
-    <p>Nessa frase temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
-    <p>Nesta frase tenho um <em>termo em ênfase</em> usando a tag EM (semântica).</p>
-    <h2>Texto Marcado</h2>
-    <p>Podemos criar tambem um <mark style="background-color: aqua;">texto marcado</mark> usando a tag MARK.</p>
-    <p>E no outro parágrafo, temos <mark>outro texto marcado</mark> no final.</p>
-    <h2>Texto Grande e Pequeno</h2>
-    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small>.</p>
-    <h2>Texto Deletado</h2>
-    <p>Podemos marcar um <del>texto como excluído</del>  para indicar que ele deve ser lido, mas não considerado.</p>
-    <h2>Texto Inserido</h2>
-    <p>Podemos marcar um <ins>texto como inserido</ins>  para dar uma ênfase e indicar que ele foi adicionado depois.</p>
-    <p>Existe também o <u>sublinhado</u> com a tag U (não semântica).</p>
-    <h2>Texto Sobrescrito</h2>
-    <p>Para inserir coisas do tipo X<sup>20</sup>+3.</p>
-    <h2>Texto Subescrito</h2>
-    <p>Para inserir coisas do tipo H<sub>2</sub>O.</p>
- </body>
- </html>
+    <title>Outras formatações</title>
+</head>
+<body>
+    <h1>Outras Formatações</h1>
+    <h2>Código-Fonte</h2>
+    <p>O comando <code>document.getElementbyId('teste')</code> é escrito em JavaScript.</p>
+    <p> Em Python temos:
+    <pre>
+        <code>
+    num = int(input('Digite um número'))
+    if num % 2 == 0:
+        print(f'O número {num} é PAR.')
+    else:
+        print(f'O número {num} é ÍMPAR.')
+    print ('Fim do Programa')    
+        </code>
+    </pre>
+    </p>
+    <h2>Citações Simples</h2>
+    <p>Como diria o pai de um amigo: <q>o computador é um burro muito rápido</q>.</p>
+    <h2>Citações Completas</h2>
+    <p>Segundo Elizabeth Castro, no seu livro HTML for the world wide web:</p>
+    <blockquote cite="https://www.google.com.br/books/edition/HTML_for_the_World_Wide_Web/Dq9L3KkDOFIC?hl=pt-PT&gbpv=1">
+        Nowadays, you have two options. You can still use characters references for maximum compatibility or you can simply type most characters and then encode your (X)HTML files in <em>Unicode</em>.
+    </blockquote>
+    <h2>Abreviações</h2>
+    <p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. </p>
+    <h2>Texto Invertido</h2>
+    <p> <bdo dir="rtl">Estou aprendendo a criar com HTML.</bdo></p>
+</body>
+</html>
