--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -14,7 +14,7 @@
             background-size: cover;
             background-attachment: fixed; */
 
-            /* Shorthand - Backgroun
+            /* Shorthand - Background
             color - image - position - repeat - [size] - attachment
             */
 
