--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
     <!-- <p>Acessando o site do <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a> para testar.</p>-->
      <p>
+        <!--Tamanho padrão 300x150px -->
         Acessando o site do
-        <iframe>
-            
+        <iframe src="https://cursoemvideo.com" frameborder="0" height="300" width="450" scrolling="no"> 
+            <a href="https://cursoemvideo.com" target="_blank"> Curso em Video </a>
         </iframe>
         para testar.
+     </p>
+     <p>
+        O repositório do Guanabara no
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            <a href="https://gustavoguanabara.github.io" target="_blank"> GitHub </a>
+        </iframe>
+        também é muito legal.
+        <!-- Alguns sites, como o google, tem proteção para que o seu conteúdo não seja exibido dentro de iframes-->
      </p>
 </body>
 </html>
